# evidroute

./: .dockerignore  .env.example  .gitignore  CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  compose.yaml  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml
.github/workflows/: ci.yml
apps/api/: main.py
apps/web/: Dockerfile  index.html  nginx.conf  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
apps/web/src/: App.test.tsx  App.tsx  api.ts  styles.css  types.ts
configs/: offline.json
configs/datasets/: public.json
configs/paper/: miniroute.json
data/mini_route/: cases.jsonl  documents.jsonl  memories.jsonl  structured.json
docs/: architecture.md  related-work.md  reproducibility.md  routes.md  threat-model.md
docs/adr/: 0001-offline-first.md  0002-risk-and-shift.md
paper/: README.md  main.tex  references.bib
reports/: data_statement.md  ethics.md  miniroute_smoke.md  model_card.md  research_scope.md
scripts/: demo.ps1  download_data.py  setup.ps1  smoke.ps1  test.ps1  validate_private_tau.py
src/evidroute/: __init__.py  api.py  cli.py  config.py  engine.py  experiment.py  models.py  reproducibility.py
src/evidroute/counterfactual/: __init__.py  runner.py
src/evidroute/datasets/: __init__.py  corpus.py  public_adapters.py
src/evidroute/evaluation/: __init__.py  metrics.py
src/evidroute/observability/: __init__.py  store.py
src/evidroute/risk/: __init__.py  calibration.py  drift.py
tests/: conftest.py  test_api.py  test_models_security.py  test_risk_evaluation.py  test_routes_engine.py
(+13 files in other folders)
